syntax = "proto3";

package pb;

option go_package = "github.com/ridhwan90/Golang-grpc/pb";

message CreatePasswordRequest {
    string username = 1;
    string site = 2;
    string site_username = 3;
    string site_email = 4;
}

message CreatePasswordResponse {
    string username = 1;
    string site = 2;
    string site_username = 3;
    string site_email = 4;
    string generated_password = 5;
}