syntax = "proto3";

package pb;

import "rpc_create_user.proto";
import "rpc_login_user.proto";
import "rpc_create_password.proto";
import "rpc_list_user_password.proto";

option go_package = "github.com/ridhwan90/Golang-grpc/pb";

service GeneratePassword{
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse){}
    rpc LoginUser (LoginUserRequest) returns (LoginUserResponse){}
    rpc CreatePassword (CreatePasswordRequest) returns (CreatePasswordResponse){}
    rpc ListPasswordbyUser (UsernameParams) returns (ListUserPassword){}
}